client/src/App.scss
@use "./partials/typography" as *;
@use "./partials/variables" as *;
@use "./partials/mixins" as *;

html,
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}

a {
    text-decoration: none;
  }

// global variable does not work all around?

button {
    background-color: $brainflix-blue;
    color: $white;
    border-radius: 4px;
    border: none;
    cursor: pointer;
    &:hover {
        background-color: $brainflix-darkblue;
    }
}

